modules/alb/main.tf
resource "aws_lb" "this" {
  load_balancer_type = "application"
  security_groups    = [aws_security_group.this.id]
  subnets            = var.subnet_ids
}

# resource "aws_lb_target_group" "this" {
#   port     = 80
#   protocol = "HTTP"
#   vpc_id   = data.aws_subnet.this.vpc_id
# }

resource "aws_lb_target_group" "this" {
  port     = 80
  protocol = "HTTP"
  vpc_id   = var.vpc_id
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.this.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "redirect"
    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

resource "aws_lb_listener" "https" {
  load_balancer_arn = aws_lb.this.arn
  port              = "443"
  protocol          = "HTTPS"
  certificate_arn   = var.certificate_arn
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.this.arn
  }
}

resource "aws_lb_target_group_attachment" "this" {
  target_group_arn = aws_lb_target_group.this.arn
  target_id        = var.instance_id
}

# resource "aws_vpc" "main" {
#   cidr_block = "10.0.0.0/16"
# }

resource "random_id" "this" {
  byte_length = 8
}

# data "aws_subnet" "this" {
#   id = var.subnet_ids[0]
# }

# resource "aws_security_group" "this" {
#   vpc_id = data.aws_subnet.this.vpc_id
#   name   = "udemy-terraform-alb-sg-${random_id.this.hex}"
# }

resource "aws_security_group" "this" {
  vpc_id = var.vpc_id
  name   = "udemy-terraform-alb-sg-${random_id.this.hex}"
}

resource "aws_security_group_rule" "http" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.this.id
}

resource "aws_security_group_rule" "https" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.this.id
}

resource "aws_security_group_rule" "egress" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.this.id
}

resource "aws_security_group_rule" "alb_to_enter_instance" {
  type                     = "ingress"
  from_port                = 80
  to_port                  = 80
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.this.id
  security_group_id        = var.instance_security_group_id
}
